solc_mutator_ossfuzz_seed_corpus/test_sol/test_c27532738d42717225d03ec5a5d247465d87f3e7ad718b6aacf980d8751e7cfd_baebd395bf9bf2ada50d1116701651d29cb02d18_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  function f0() external   
  {
  }
  function f1(function (uint72, bytes9) external   returns (address payable, bytes25, int104[] memory) i0) external    returns(function () external   returns (bytes3) o0,bool[1] memory o1)
  {
  }
  function f2(address[1] memory i0,uint216 i1) external   
  {
  }
  modifier m0() 
  {
    _;
  }
  function f3(bytes memory i0) public  m0()  returns(bytes32[1] memory o0,uint160[] memory o1)
  {
  }
  function f4() private  m0()  returns(bytes18 o0)
  {
  }
  bytes32 public constant cons0 = ((bytes28(0x8c79c0d8673c5ab2434fc90eca86f93a4cab40eb761f1b31f76bbf82) != bytes28(0xf704a018df8d7c42150d1c0c3758b865536011dc7fb1591c27e3d60e)) ? ((bytes32(0x0000000000000000000000000000000000000000000000000000000000000000) ^ bytes32(0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff)) | bytes32(0x0000000000000000000000000000000000000000000000000000000000000000)) : bytes32(0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff));
  function f5() external  m0()  returns(uint192[] memory o0,function () external   o1,uint72 o2)
  {
    if (false)
    {
    }
  }
  event ev0() anonymous;
  function f6(function (uint240, bytes25, function (function (bytes7, bool) external  ) internal   returns (bool)) internal   returns (int40[] memory, int184) i0,uint192 i1) external  m0()  returns(function (bytes29, bytes1, function (address payable) external   returns (bytes6)) external   returns (bool, int8, bytes12) o0,bytes18 o1)
  {
  }
  function f7() external    returns(address payable o0)
  {
  }
}
using L0 for uint;
struct St0 {
  address el0;
  bytes13 el1;
}
// ----
// TypeError 4103: (su0.sol:1198-1345): Internal type is not allowed for public or external functions.
